# ssw_practical

./: README.md
task_01/: CMakeLists.txt  Makefile  README.md
task_01/src/: main.cpp  task_01.cpp
task_02/: CMakeLists.txt  Makefile  README.md
task_02/src/: Error.cpp  Error.h  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Tree.cpp  Tree.h  Variable.h  main.cpp  task_02.cpp
